Fix: white border shows up for News category posts in single while it should be invisible, so make it light-blue

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -21,6 +21,7 @@ $black:             rgb(0, 0, 0) !default;
 // Lines
 $border:            2px dotted $black;
 $border-white:      2px dotted $white;
+$border-light-blue: 2px dotted $light-blue;
 
 // We need to see how we will deal with the default colors 
 
